--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "smooth-corners": "^1.0.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
