--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "corner-smoothing": "^0.1.5",
+    "framer-motion": "^11.3.24",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.417.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "smooth-corners": "^1.0.8",
-    "tailwind-merge": "^2.4.0",
+    "solid-corner-smoothing": "^0.2.6",
+    "solid-js": "^1.8.20",
+    "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zustand": "^4.5.4"
@@ -33,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
